--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "author": "",
     "license": "ISC",
     "devDependencies": {
+        "@types/express": "^4.17.15",
+        "@types/node": "^18.11.15",
         "nodemon": "^2.0.20"
     },
     "dependencies": {
